# sieve

./: .gitignore  CHANGELOG  Cargo.toml  README.md
examples/: filter.rs  serialize.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: sieve.rs
src/: lib.rs
src/compiler/: mod.rs
src/compiler/grammar/: action_convert.rs  action_editheader.rs  action_fileinto.rs  action_keep.rs  action_mime.rs  action_notify.rs  action_redirect.rs  action_reject.rs  action_require.rs  action_set.rs  action_vacation.rs  ast.rs  capability.rs  command.rs  comparator.rs  iff.rs  instruction.rs  mod.rs  require.rs  string_list.rs  test.rs  test_address.rs  test_body.rs  test_date.rs  test_duplicate.rs  test_envelope.rs  test_environment.rs  test_exists.rs  test_extlists.rs  test_hasflag.rs  test_header.rs  test_ihave.rs  test_mailbox.rs  test_mailboxid.rs  test_notify.rs  test_size.rs  test_spamtest.rs  test_specialuse.rs  test_string.rs
src/compiler/lexer/: capability.rs  mod.rs  string.rs  tokenizer.rs  word.rs
src/parser/: lexer.rs  mod.rs  string.rs
src/runtime/: context.rs  eval.rs  expression.rs  mod.rs  serialize.rs  string.rs  test.rs  variables.rs
src/runtime/actions/: action_convert.rs  action_editheader.rs  action_fileinto.rs  action_flags.rs  action_set.rs  (+8 more)
tests/: AUTHORS  _deleteme.svtest  control-if.svtest  control-stop.svtest  lexer.svtest  rfc.svrfc  test-address.svtest  test-allof.svtest  test-anyof.svtest  test-exists.svtest  test-header.svtest  test-size.svtest  testsuite.svtest
tests/comparators/: i-ascii-casemap.svtest  i-octet.svtest
tests/compile/: compile.svtest  errors.svtest  recover.svtest  warnings.svtest
tests/execute/: actions.svtest  address-normalize.svtest  errors-cpu-limit.svtest  errors.svtest  examples.svtest  mailstore.svtest  smtp.svtest
tests/extensions/: encoded-character.svtest  envelope.svtest
tests/failures/: fuzz1.svtest  fuzz2.svtest  fuzz3.svtest  mailbox-bad-utf8.svtest
tests/match-types/: contains.svtest  is.svtest  matches.svtest
tests/multiscript/: basic.svtest  conflicts.svtest
tests/plugins/: execute.svtest
tests/rfcs/: _deleteme.json  extensions.json  extensions.sieve  plugins.json  plugins.sieve  rfc3894.json  rfc3894.sieve  rfc5173.json  rfc5173.sieve  rfc5183.json  rfc5183.sieve  rfc5228.json  rfc5228.sieve  rfc5229.json  rfc5229.sieve  rfc5230.json  rfc5230.sieve  rfc5231.json  rfc5231.sieve  rfc5232.json  rfc5232.sieve  rfc5235.json  rfc5235.sieve  rfc5260.json  rfc5260.sieve  rfc5293.json  rfc5293.sieve  rfc5429.json  rfc5429.sieve  rfc5435.json  rfc5435.sieve  rfc5490.json  rfc5490.sieve  rfc5703.json  rfc5703.sieve  rfc6009.json  rfc6009.sieve  rfc6134.json  rfc6134.sieve  rfc6558.json  (+11 more)
tests/stalwart/: expressions.svtest  extensions.svtest  external.svtest  foreveryline.svtest  foreverypart.svtest  functions.svtest  header_variables.svtest  plugins.svtest  variables.svtest  while.svtest
(+187 files in other folders)
