[package]
name = "sieve-rs"
description = "Sieve filter interpreter for Rust"
authors = [ "Stalwart Labs <hello@stalw.art>"]
repository = "https://github.com/stalwartlabs/sieve"
homepage = "https://github.com/stalwartlabs/sieve"
license = "AGPL-3.0-only"
keywords = ["sieve", "interpreter", "compiler", "email", "mail"]
categories = ["email", "compilers"]
readme = "README.md"
version = "0.5.2"
edition = "2021"

[lib]
name = "sieve"

[dependencies]
mail-parser = { version = "0.9", features = ["ludicrous_mode", "full_encoding", "serde_support"] }
mail-builder = { version = "0.3",  features = ["ludicrous_mode"] } 
phf = { version = "0.11", features = ["macros"] }
serde = { version = "1.0", features = ["derive", "rc"] }
bincode = "1.3.3"
ahash = { version = "0.8.0" }
fancy-regex = "0.13.0"

[dev-dependencies]
serde_json = "1.0"
evalexpr = "11.1.0"
