[package]
name = "sieve-rs"
description = "Sieve filter interpreter for Rust"
authors = [ "Stalwart Labs <hello@stalw.art>"]
repository = "https://github.com/stalwartlabs/sieve"
homepage = "https://github.com/stalwartlabs/sieve"
license = "AGPL-3.0-only"
keywords = ["sieve", "interpreter", "compiler", "email", "mail"]
categories = ["email", "compilers"]
readme = "README.md"
version = "0.7.0"
edition = "2021"

[lib]
name = "sieve"
doctest = false

[dependencies]
mail-parser = { version = "0.11", features = ["full_encoding"] }
mail-builder = { version = "0.4" } 
hashify = { version = "0.2" }
ahash = { version = "0.8.0" }
fancy-regex = "0.14.0"
arc-swap = "1.7.1"
rkyv = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive", "rc"], optional = true }

[dev-dependencies]
mail-parser = { version = "0.11", features = ["full_encoding", "serde", "rkyv"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
evalexpr = "11.1.0"

[features]
default = []
rkyv = ["dep:rkyv", "mail-parser/rkyv"]
serde = ["dep:serde", "mail-parser/serde"]
